Beautify and add utf8 robo arm to title

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title>Brandon Parmley - Web Development Personal Site</title>
+    <title>&#129470;&nbsp;Brandon Parmley - Web Development Personal Site&nbsp;&#129470;</title>
     <meta name="description" content="My first html document in the Udemy course, The Complete Web Development Bootcamp taught by Dr. Angela Yu.">
     <meta name="keywords" content="html, beginer, udemy, course">
-  </head>
-  <body>
-<h1>Hello World</h1>
-  </body>
+</head>
+
+<body>
+    <h1>Hello World</h1>
+</body>
+
 </html>
