Add name, credentials, and link to school site.

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -4,12 +4,17 @@
 <head>
     <meta charset="utf-8">
     <title>&#129470;&nbsp;Brandon Parmley - Web Development Personal Site&nbsp;&#129470;</title>
-    <meta name="description" content="My first html document in the Udemy course, The Complete Web Development Bootcamp taught by Dr. Angela Yu.">
+    <meta name="description" content="Basic HTML personal page. Using no JavaScript or CSS.">
     <meta name="keywords" content="html, beginer, udemy, course">
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <h1>Brandon Parmley</h1>
+    <p><em>Freelance Front End Web Developer</em><br>
+        Graduated 2016 from <a href="https://www.uvu.edu" target="_blank">Utah Valley University</a><br>
+        Bachelor of Science - Digital Media
+    </p>
+
 </body>
 
 </html>
