List info about myself using UL and OL tags

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -11,9 +11,33 @@
 <body>
     <h1>Brandon Parmley</h1>
     <p><em>Freelance Front End Web Developer</em><br>
-        Graduated 2016 from <a href="https://www.uvu.edu" target="_blank">Utah Valley University</a><br>
-        Bachelor of Science - Digital Media
+        Front end web developer getting back into the business.
     </p>
+    <hr>
+    <h3>Traditional Education</h3>
+    <p>Graduated 2016 from <a href="https://www.uvu.edu" target="_blank">Utah Valley University</a><br>
+        Bachelor of Science - Digital Media</p>
+    <h3>Udemy Courses</h3>
+    <ul>
+        <li><a href="https://www.udemy.com/share/1013gG3@G3vsx_hqkysEs7n8KiDBG53_7d2uwGwf6aN0yzWLFo5e5BiKFSc7hdiSU5sdaveP/" target="_blank">The Complete 2022 Web Development Bootcamp</a> - <strong>20 of 503 Complete</strong></li>
+    </ul>
+    <h3>My Hobbies</h3>
+    <ol>
+        <li>Video Gaming
+            <ol>
+                <li>World of Warcraft</li>
+                <li>Star Wars the Old Republic</li>
+                <li>The Sims 4</li>
+            </ol>
+        </li>
+        <li>Outdoor Activities
+            <ol>
+                <li>Camping</li>
+                <li>Hiking</li>
+                <li>Bicycling</li>
+            </ol>
+        </li>
+    </ol>
 
 </body>
 
