Add image of myself as a profile picture.

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <img src="https://drive.google.com/uc?export=view&id=1gFH0al4Rk4vt61vpC9N32hn1mndUmD72" alt="Brandon Parmley profile picture" width="400px">
     <h1>Brandon Parmley</h1>
     <p><em>Freelance Front End Web Developer</em><br>
         Front end web developer getting back into the business.
