link to my codepen and github accounts

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -38,6 +38,8 @@
                 <li>Bicycling</li>
             </ol>
         </li>
+        <li><a href="https://codepen.io/bparmley" target="_blank">@bparmley on codepen</a></li>
+        <li><a href="https://github.com/bparmley" target="_blank">@bparmley on github</a></li>
     </ol>
 
 </body>
