Add work experience using a table

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -41,6 +41,24 @@
         <li><a href="https://codepen.io/bparmley" target="_blank">@bparmley on codepen</a></li>
         <li><a href="https://github.com/bparmley" target="_blank">@bparmley on github</a></li>
     </ol>
+    <h3>Work Experience</h3>
+    <table>
+        <thead>
+            <td>Date</td>
+            <td>Employer</td>
+            <td>Job Title</td>
+        </thead>
+        <tr>
+            <td>2011 - 2016</td>
+            <td>Utah Valley University</td>
+            <td>Web Developer</td>
+        </tr>
+        <tr>
+            <td>2016 - 2017</td>
+            <td>Above Training statefoodsafety.com</td>
+            <td>Web Developer</td>
+        </tr>
+    </table>
 
 </body>
 
