--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -9,11 +9,18 @@
 </head>
 
 <body>
-    <img src="https://drive.google.com/uc?export=view&id=1gFH0al4Rk4vt61vpC9N32hn1mndUmD72" alt="Brandon Parmley profile picture" width="400px">
-    <h1>Brandon Parmley</h1>
-    <p><em>Freelance Front End Web Developer</em><br>
-        Front end web developer getting back into the business.
-    </p>
+    <table cellspacing="20">
+        <tr>
+            <td><img src="https://drive.google.com/uc?export=view&id=1gFH0al4Rk4vt61vpC9N32hn1mndUmD72" alt="Brandon Parmley profile picture" width="200px"></td>
+            <td>
+                <h1>Brandon Parmley</h1>
+                <p><em>Freelance Front End Web Developer</em><br>
+                    Front end web developer getting back into the business.
+                </p>
+            </td>
+        </tr>
+    </table>
+
     <hr>
     <h3>Traditional Education</h3>
     <p>Graduated 2016 from <a href="https://www.uvu.edu" target="_blank">Utah Valley University</a><br>
@@ -50,7 +57,7 @@
         </thead>
         <tr>
             <td>2011 - 2016</td>
-            <td>Utah Valley University</td>
+            <td>Utah Valley University Web Development Services</td>
             <td>Web Developer</td>
         </tr>
         <tr>
