Add list of skills using table and unicode characters

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -66,7 +66,53 @@
             <td>Web Developer</td>
         </tr>
     </table>
-
+    <h3>Skills</h3>
+    <table>
+        <tr>
+            <td>HTML 5</td>
+            <td>&#9733;&#9733;&#9733;&#9734;&#9734;</td>
+        </tr>
+        <tr>
+            <td>CSS 3</td>
+            <td>&#9733;&#9733;&#9733;&#9734;&#9734;</td>
+        </tr>
+        <tr>
+            <td>JavaScript</td>
+            <td>&#9733;&#9734;&#9734;&#9734;&#9734;</td>
+        </tr>
+        <tr>
+            <td>MySQL</td>
+            <td>&#9734;&#9734;&#9734;&#9734;&#9734;</td>
+        </tr>
+        <tr>
+            <td>PHP</td>
+            <td>&#9734;&#9734;&#9734;&#9734;&#9734;</td>
+        </tr>
+        <tr>
+            <td>Node</td>
+            <td>&#9733;&#9734;&#9734;&#9734;&#9734;</td>
+        </tr>
+        <tr>
+            <td>MongoDB</td>
+            <td>&#9734;&#9734;&#9734;&#9734;&#9734;</td>
+        </tr>
+        <tr>
+            <td>jQuery</td>
+            <td>&#9733;&#9734;&#9734;&#9734;&#9734;</td>
+        </tr>
+        <tr>
+            <td>SEO</td>
+            <td>&#9733;&#9734;&#9734;&#9734;&#9734;</td>
+        </tr>
+        <tr>
+            <td>Scrum</td>
+            <td>&#9733;&#9733;&#9734;&#9734;&#9734;</td>
+        </tr>
+        <tr>
+            <td>React</td>
+            <td>&#9733;&#9734;&#9734;&#9734;&#9734;</td>
+        </tr>
+    </table>
 </body>
 
 </html>
