Update index with navigation and progress

--- a/HTML - Personal Site/index.html
+++ b/HTML - Personal Site/index.html
@@ -27,7 +27,7 @@
         Bachelor of Science - Digital Media</p>
     <h3>Udemy Courses</h3>
     <ul>
-        <li><a href="https://www.udemy.com/share/1013gG3@G3vsx_hqkysEs7n8KiDBG53_7d2uwGwf6aN0yzWLFo5e5BiKFSc7hdiSU5sdaveP/" target="_blank">The Complete 2022 Web Development Bootcamp</a> - <strong>22 of 503 Complete</strong></li>
+        <li><a href="https://www.udemy.com/share/1013gG3@G3vsx_hqkysEs7n8KiDBG53_7d2uwGwf6aN0yzWLFo5e5BiKFSc7hdiSU5sdaveP/" target="_blank">The Complete 2022 Web Development Bootcamp</a> - <strong>26 of 503 Complete</strong></li>
     </ul>
     <h3>My Hobbies</h3>
     <ol>
@@ -126,6 +126,8 @@
             </td>
         </tr>
     </table>
+    <hr>
+    <footer><a href="#">Home</a> | <a href="contact.html">Contact</a></footer>
 </body>
 
 </html>
