--- a/HTML - Personal Site/contact.html
+++ b/HTML - Personal Site/contact.html
@@ -12,7 +12,7 @@
     <h1>Contact Me</h1>
     <p>Fictional mailing address</p>
     <p>123-456-7890 (not a real number)</p>
-    <p><a href="<a href=" mailto:joe@example.com?subject=contact">not a real email address</a>"></a></p>
+    <p><a href="<a href=" mailto:joe@example.com?subject=contact">not a real email address</a></p>
 
     <form class="" action="index.html" method="post">
         <label for="name">Your Name:</label>
